2000-02-08  Matt Loper  <matt.loper@splashtech.com>

	* camel/camel-formatter.c: New member to 'CamelFormatterPrivate',
	'attachments', will be used to let the caller know which items
	should be treated as attachments (as opposed to objects which are
	inline to the body).
	(text_to_html): name changed from 'encode_entities'. Also now
	converts newlines to <br> tags.
	(camel_formatter_mime_message_to_html): Now takes two output
	streams -- one for the header, and one for the body.
	(get_bonobo_tag_for_object): New function; tries to make a tag out
	of (1) the leaf of a mime message and (2) a bonobo object that can
	handle its mime type, but can return NULL if it fails to find the
	mime type.
	(handle_vcard): New function; will write out a vcard as html.

2000-02-08  Iain Holmes  <ih@csd.abdn.ac.uk>

	* shell/Makefile.am: Changed the order of the compilation, so the CORBA
	stuff was generated before it was needed.

2000-02-07  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text.h, widgets/e-text.c: Added line wrap and a max
	number of lines (max number of lines is only obeyed if text is not
	being edited).

2000-02-07  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/printing/e-contact-print.c: Removed an unneccessary
	include of libhnj.  All uses of libhnj are commented out.

2000-02-07  Matt Loper  <matt.loper@splashtech.com>

	* camel/camel-formatter.c (mime_part_to_html): function deleted.

	* tests/test-formatter.c (print_usage_and_quit): New function,
	which gives usage information.

	* camel/camel-formatter.c: made the 'stream' a member of the
	CamelFormatter class, so that streams don't have to be explicitly
	sent as a param where a CamelFormatter is also sent..
	(handle_text_plain): Use 'encode_entities' to change '<' to
	'&gt;', etc.

2000-02-07  Damon Chaplin  <damon@helixcode.com>

	* widgets/shortcut-bar/e-group-bar.c (e_group_bar_draw): finished.

	* widgets/shortcut-bar/e-icon-bar.c (e_icon_bar_item_released): 